version/0.21/_sources/api/solver/_autosummary/settings/icing_2.rst.txt
:orphan:

.. _icing_2:

icing
=====

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.icing_2.icing
    :show-inheritance:

.. rubric:: Attributes

==================================================================   =======================

Attribute                                                                            Summary

==================================================================   =======================
:ref:`fensapice_flow_bc_subtype <fensapice_flow_bc_subtype>`             Help not available.

:ref:`fensapice_ice_icing_mode <fensapice_ice_icing_mode>`               Help not available.

:ref:`fensapice_ice_hflux <fensapice_ice_hflux>`                         Help not available.

:ref:`fensapice_ice_hflux_1 <fensapice_ice_hflux_1>`                     Help not available.

:ref:`fensapice_drop_vwet <fensapice_drop_vwet>`                         Help not available.

:ref:`fensapice_drop_reinj <fensapice_drop_reinj>`                       Help not available.

:ref:`fensapice_dpm_wall_condition <fensapice_dpm_wall_condition>`       Help not available.

:ref:`fensapice_dpm_udf_wall_cond <fensapice_dpm_udf_wall_cond>`         Help not available.

:ref:`fensapice_dpm_bc_norm_coeff <fensapice_dpm_bc_norm_coeff>`         Help not available.

:ref:`fensapice_dpm_bc_tang_coeff <fensapice_dpm_bc_tang_coeff>`         Help not available.

==================================================================   =======================

.. rubric:: Included in:

===================================   =================================

Parent                                                          Summary

===================================   =================================
:ref:`wall_child <wall_child>`             'child_object_type' of wall.

:ref:`phase_child <phase_child_30>`       'child_object_type' of phase.

:ref:`phase_child <phase_child_55>`       'child_object_type' of phase.

===================================   =================================

