version/0.28/_sources/api/solver/_autosummary/settings/icing_2.rst.txt
:orphan:

.. _icing_2:

icing
=====

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.icing_2
    :show-inheritance:

.. rubric:: Attributes

========================================================================================   =======================

Attribute                                                                                                  Summary

========================================================================================   =======================
:ref:`fensapice_flow_bc_subtype <fensapice_flow_bc_subtype>`                                   Help not available.

:ref:`fensapice_ice_icing_mode <fensapice_ice_icing_mode>`                                     Help not available.

:ref:`fensapice_ice_hflux_mode <fensapice_ice_hflux_mode>`                                     Help not available.

:ref:`fensapice_ice_hflux_value <fensapice_ice_hflux_value>`                                   Help not available.

:ref:`fensapice_ice_hflux_file <fensapice_ice_hflux_file>`                                     Help not available.

:ref:`fensapice_ice_wall_thickness <fensapice_ice_wall_thickness>`                             Help not available.

:ref:`fensapice_ice_wall_internal_temperature <fensapice_ice_wall_internal_temperature>`       Help not available.

:ref:`fensapice_ice_wall_conductivity <fensapice_ice_wall_conductivity>`                       Help not available.

:ref:`fensapice_drop_vwet <fensapice_drop_vwet>`                                               Help not available.

:ref:`fensapice_drop_reinj <fensapice_drop_reinj>`                                             Help not available.

:ref:`fensapice_dpm_wall_condition <fensapice_dpm_wall_condition>`                             Help not available.

:ref:`fensapice_dpm_udf_wall_cond <fensapice_dpm_udf_wall_cond>`                               Help not available.

:ref:`fensapice_dpm_bc_norm_coeff <fensapice_dpm_bc_norm_coeff>`                               Help not available.

:ref:`fensapice_dpm_bc_tang_coeff <fensapice_dpm_bc_tang_coeff>`                               Help not available.

========================================================================================   =======================

.. rubric:: Included in:

======================================   =============================================

Parent                                                                         Summary

======================================   =============================================
:ref:`wall_child <wall_child>`                            'child_object_type' of wall.

:ref:`phase_25_child <phase_25_child>`                   'child_object_type' of phase.

:ref:`settings_28 <settings_28>`             Select domain name to define settings on.

:ref:`phase_51_child <phase_51_child>`                   'child_object_type' of phase.

======================================   =============================================

